tests/ui/traits/non_lifetime_binders/closure-infer.classic.stderr
warning: the feature `non_lifetime_binders` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/closure-infer.rs:4:12
   |
LL | #![feature(non_lifetime_binders)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #108185 <https://github.com/rust-lang/rust/issues/108185> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: expected a `Fn<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:16:5: 16:8]`
  --> $DIR/closure-infer.rs:12:15
   |
LL | fn take2() -> impl for<T> Fn(T) -> T {
   |               ^^^^^^^^^^^^^^^^^^^^^^ expected an `Fn<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:16:5: 16:8]`
   |
   = help: the trait `Fn<(T,)>` is not implemented for closure `[closure@$DIR/closure-infer.rs:16:5: 16:8]`

error[E0277]: expected a `FnOnce<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:16:5: 16:8]`
  --> $DIR/closure-infer.rs:12:15
   |
LL | fn take2() -> impl for<T> Fn(T) -> T {
   |               ^^^^^^^^^^^^^^^^^^^^^^ expected an `FnOnce<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:16:5: 16:8]`
   |
   = help: the trait `FnOnce<(T,)>` is not implemented for closure `[closure@$DIR/closure-infer.rs:16:5: 16:8]`

error[E0277]: expected a `Fn<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:20:10: 20:13]`
  --> $DIR/closure-infer.rs:20:10
   |
LL |     take(|x| x)
   |     ---- ^^^^^ expected an `Fn<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:20:10: 20:13]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Fn<(T,)>` is not implemented for closure `[closure@$DIR/closure-infer.rs:20:10: 20:13]`
note: required by a bound in `take`
  --> $DIR/closure-infer.rs:7:18
   |
LL | fn take(id: impl for<T> Fn(T) -> T) {
   |                  ^^^^^^^^^^^^^^^^^ required by this bound in `take`

error[E0277]: expected a `FnOnce<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:20:10: 20:13]`
  --> $DIR/closure-infer.rs:20:10
   |
LL |     take(|x| x)
   |     ---- ^^^^^ expected an `FnOnce<(T,)>` closure, found `[closure@$DIR/closure-infer.rs:20:10: 20:13]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `FnOnce<(T,)>` is not implemented for closure `[closure@$DIR/closure-infer.rs:20:10: 20:13]`
note: required by a bound in `take`
  --> $DIR/closure-infer.rs:7:34
   |
LL | fn take(id: impl for<T> Fn(T) -> T) {
   |                                  ^ required by this bound in `take`

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
